src/tests/snapshots/synoik__tests__window_opening__check_target_output_and_workspace@ws2-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "open on workspace: ws-2\nwant fullscreen: AU"
expression: snapshot
---
final monitor: headless-2
final workspace: 0 (ws-2)

initial configure:
size: 500 × 1028, bounds: 1868 × 1028, states: []

post-map configures:
size: 500 × 1028, bounds: 1868 × 1028, states: []
